--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,6 +47,7 @@
             </div>
           </div>
           <!-- User mini profile -->
+           {% if user.is_authenticated %}
           <div class="sidenav-user d-flex flex-column align-items-center justify-content-between text-center">
             <!-- Avatar -->
             <div>
@@ -54,7 +55,7 @@
                 <img alt="Image placeholder" src="{% static 'img/theme/light/team-1-800x800.jpg' %}" class="">
               </a>
               <div class="mt-4">
-                <h5 class="mb-0 text-white">Heather Parker</h5>
+                <h5 class="mb-0 text-white">{{ user.name }}</h5>
                 <span class="d-block text-sm text-white opacity-8 mb-3">Lover of Food</span>
                 <a href="#" class="btn btn-sm btn-white btn-icon rounded-pill shadow hover-translate-y-n3">
                   <span class="btn-inner--icon"><i class="fas fa-coins"></i></span>
@@ -79,6 +80,7 @@
               </a>
             </div>
           </div>
+           {% endif %}
           <!-- Application nav -->
           
           <!-- Misc area -->
